2018-05-08  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r231468.

        Broke the CLoop build

        Reverted changeset:

        "InPlaceAbstractState::beginBasicBlock shouldn't have to clear
        any abstract values"
        https://bugs.webkit.org/show_bug.cgi?id=185365
        https://trac.webkit.org/changeset/231468

2018-05-08  Sihui Liu  <sihui_liu@apple.com>

        [WKHTTPCookieStore getAllCookies] returns inconsistent creation time
        https://bugs.webkit.org/show_bug.cgi?id=185041
        <rdar://problem/34684214>

        Reviewed by Geoffrey Garen.

        Add API test Coverage.

        * TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:
        (TEST):

2018-05-08  Chris Dumez  <cdumez@apple.com>

        Unreviewed, fix issue with running Speedometer PerfTest after r231450.

        * Scripts/webkitpy/performance_tests/perftest.py:
        (PerfTest):

2018-05-08  Chris Dumez  <cdumez@apple.com>

        Unreviewed, fix issue with running Speedometer PerfTest after r231450.

        * Scripts/webkitpy/performance_tests/perftest.py:
        (PerfTest):

2018-05-07  Chris Dumez  <cdumez@apple.com>

        Unreviewed, fix issue with running Speedometer PerfTest after r231450.

        * Scripts/webkitpy/performance_tests/perftest.py:
        (PerfTest):

2018-05-06  Filip Pizlo  <fpizlo@apple.com>

        InPlaceAbstractState::beginBasicBlock shouldn't have to clear any abstract values
        https://bugs.webkit.org/show_bug.cgi?id=185365

        Reviewed by Saam Barati.
        
        Make it possible to measure compile times.

        * Scripts/run-jsc-benchmarks:

2018-05-07  Leo Balter  <leonardo.balter@gmail.com>

        Test262-Runner: Add base module to the local deps - unicore/Exact.pl
        https://bugs.webkit.org/show_bug.cgi?id=185390

        Reviewed by Michael Saboff.

        * Scripts/test262/local/lib/perl5/unicore/Exact.pl: Added.

2018-05-07  Jonathan Bedard  <jbedard@apple.com>
