@@ -250,11 +250,7 @@ class PerfTest(object):
         re.compile("^\s+$"),
         # Following are for handle existing test like Dromaeo
         re.compile(re.escape("""main frame - has 1 onunload handler(s)""")),
-        re.compile(re.escape("""frame "<!--framePath //<!--frame0-->-->" - has 1 onunload handler(s)""")),
-        re.compile(re.escape("""frame "<!--framePath //<!--frame0-->/<!--frame0-->-->" - has 1 onunload handler(s)""")),
-        re.compile(re.escape("""frame "<!--frame7-->" - has 1 onunload handler(s)""")),
-        re.compile(re.escape("""frame "<!--frame23-->" - has 1 onunload handler(s)""")),
-        re.compile(re.escape("""frame "<!--frame39-->" - has 1 onunload handler(s)""")),
+        re.compile('frame \"[^"]+\" - has \d+ onunload handler\(s\)'),
         # Following is for html5.html
         re.compile(re.escape("""Blocked access to external URL http://www.whatwg.org/specs/web-apps/current-work/""")),
         re.compile(r"CONSOLE MESSAGE: (line \d+: )?Blocked script execution in '[A-Za-z0-9\-\.:]+' because the document's frame is sandboxed and the 'allow-scripts' permission is not set."),
