@@ -1,3 +1,10 @@
+2018-05-08  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed, simplify Speedometer fixes landed in r231489, r231483 & r231474.
+
+        * Scripts/webkitpy/performance_tests/perftest.py:
+        (PerfTest):
+
 2018-05-08  Ryan Haddad  <ryanhaddad@apple.com>
 
         Unreviewed, rolling out r231468.
